<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E3ED7B">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt1"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#0B0A0A"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:text="@string/result"
        android:textSize="18dp"
        android:textColor="#1533DA"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/mat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:layout_marginTop="10dp"
        android:text="@string/mat1"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#775D12"/>

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mat1"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:ems="10" />

    <TextView
        android:id="@+id/Espa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit1"
        android:layout_marginTop="10dp"
        android:text="@string/Espa"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#775D12"/>

    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Espa"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:ems="10" />



    <TextView
        android:id="@+id/ingles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit2"
        android:layout_marginTop="10dp"
        android:text="@string/Ingles"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#775D12"/>

    <EditText
        android:id="@+id/edit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingles"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:ems="10" />



    <TextView
        android:id="@+id/artes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit3"
        android:layout_marginTop="10dp"
        android:text="@string/artes"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#775D12"/>

    <EditText
        android:id="@+id/edit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artes"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:ems="10" />

    <TextView
        android:id="@+id/hist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit4"
        android:layout_marginTop="10dp"
        android:text="@string/hist"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#775D12"/>

    <EditText
        android:id="@+id/edit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hist"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:ems="10" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit5"
        android:layout_marginTop="10dp"
        android:onClick="calcular"
        android:text="@string/bt1"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:backgroundTint="#7AE438" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt1"
        android:layout_marginTop="10dp"
        android:text="@string/tvresult"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#775D12"/>



</RelativeLayout>